--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Premium Calculator"
+        android:label="Neo Calculator"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PremiumCalculator"
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Premium Calculator"
+            android:label="Neo Calculator"
             android:theme="@style/Theme.PremiumCalculator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
